force-app/main/default/objects/Employee_Zoom_Identity__c/Employee_Zoom_Identity__c.object-meta.xml
<CustomObject>
    <label>Employee Zoom Identity</label>
    <nameField>
        <label>Employee Zoom Identity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Zoom Identity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>