force-app/main/default/objects/Employee_Zoom_Identity__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls eligibility.</description>
    <inlineHelpText>Indicates mapping is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>