force-app/main/default/objects/Employee_Zoom_Identity__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal employee reference.</description>
    <inlineHelpText>Salesforce user tied to Zoom identity.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Zoom_Identity</relationshipName>
    <type>Lookup</type>
</CustomField>