force-app/main/default/objects/Employee_Zoom_Identity__c/fields/Zoom_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Display_Name__c</fullName>
    <description>Human-readable identifier.</description>
    <inlineHelpText>Display name for fallback matching.</inlineHelpText>
    <label>Zoom Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>