force-app/main/default/objects/Employee_Zoom_Identity__c/fields/Zoom_Email__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Email__c</fullName>
    <description>Primary identifier.</description>
    <inlineHelpText>Email used for matching.</inlineHelpText>
    <label>Zoom Email</label>
    <type>Email</type>
</CustomField>