force-app/main/default/objects/Employee_Zoom_Identity__c/fields/Zoom_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_User_Id__c</fullName>
    <description>Secondary identifier.</description>
    <inlineHelpText>Zoom user ID.</inlineHelpText>
    <label>Zoom User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>