force-app/main/default/objects/Employee_Zoom_Identity__c/validationRules/User_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>Please insert a User.</errorMessage>
</ValidationRule>